--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,17 @@
     --color-bg-top: hsl(209, 23%, 22%);
     --color-text: hsl(0, 0%, 100%);
     --color-text-top: hsl(0, 0%, 100%);
-    --color-input: hsl(0, 0%, 52%);
+    --color-input: hsl(0, 0%, 100%);
     --color-bg-input: hsl(209, 23%, 22%);
   }
 
   .light {
-    --color-bg: hsl(0, 0%, 98%);
+    --color-bg: hsl(0, 0%, 95%);
     --color-bg-top: hsl(0, 0%, 100%);
     --color-text: hsl(200, 15%, 8%);
     --color-text-top: hsl(200, 15%, 8%);
     --color-input: hsl(0, 0%, 52%);
-    --color-bg-input: hsl(0, 0%, 98%);
+    --color-bg-input: hsl(0, 0%, 100%);
   }
 }
 
@@ -87,6 +87,7 @@ header button {
 main {
   background-color: var(--color-bg);
   color: var(--color-text);
+  min-height: 100vh;
 }
 
 .container {
@@ -94,20 +95,31 @@ main {
   margin: 0 auto;
 }
 
-.nav {
+nav {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
+  gap: 2rem;
+
+  @media (min-width: 700px) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 form {
-  margin: 1rem 0;
   display: flex;
+  overflow: hidden;
   align-items: center;
   padding-left: 2rem;
   background-color: var(--color-bg-input);
   height: 3.125rem;
-  max-width: 25rem;
   border-radius: 0.3125rem;
+
+  @media (min-width: 450px) {
+    width: 350px;
+  }
 }
 
 .search-icon {
@@ -122,11 +134,15 @@ form label {
 form input {
   padding-left: 2rem;
   font-size: 0.8rem;
-  outline: none;
   height: 3.125rem;
+  width: 100%;
   background-color: var(--color-bg-input);
   border: none;
   color: var(--color-text);
+}
+
+form input:focus {
+  outline: none;
 }
 
 form input::placeholder {
@@ -134,8 +150,7 @@ form input::placeholder {
 }
 
 .filter {
-  margin-top: 2rem;
-  max-width: 12.5rem;
+  width: 12rem;
   position: relative;
 }
 
@@ -168,7 +183,7 @@ form input::placeholder {
 }
 
 .filter__options li {
-  padding: 0.5rem 1rem;
+  padding: 0.3rem 1rem;
   cursor: pointer;
 }
 
@@ -189,6 +204,8 @@ form input::placeholder {
     display: grid;
     grid-template-columns: repeat(auto-fit, 16rem);
     gap: 3rem;
+    justify-content: start;
+    align-items: start;
   }
 }
 
@@ -228,3 +245,7 @@ form input::placeholder {
   margin-right: 3px;
 }
 
+.link {
+  text-decoration: none;
+  color: inherit;
+}
